# Slop-Engine

./: .gitignore  Cargo.toml  README.md  SECURITY.md  causal_save.rs  docs.md  index.html  lib.rs  main.js  network.rs  offload.rs  predictive_renderer.rs  renderer.rs  resource_manager.rs  settings.json  shaders.rs  spectral_pss.rs  src:lib.rs  src:renderer.rs  src:shader.wgsl.txt  src:state.rs  sw.js  tdsp_engine.rs
.github/workflows/: ci.yml  deploy.yml  rust.yml
src/: animation.rs  anticheat.rs  armature.rs  asset.rs  asset_manifest.rs  audio.rs  audio_optimizer.rs  behavior_tree.rs  bind_group_manager.rs  cache.rs  camera.rs  camera_controller.rs  causal_save.rs  command_buffer.rs  compat.rs  config.rs  context.rs  crash_reporter.rs  culling.rs  depth_texture.rs  ecs.rs  editor.rs  engine.rs  error.rs  event_bus.rs  fps_counter.rs  frame_gen.rs  gltf_loader.rs  gui.rs  hot_reload_watcher.rs  input_system.rs  integer_scaling.rs  lib.rs  lighting.rs  lod.rs  logger.rs  main.rs  material_instance.rs  memory_optimizer.rs  mesh_material_system.rs  (+39 more)
src/components/: input.rs  lifecycle.rs  mod.rs  physics.rs  render.rs  stats.rs  transform.rs
src/gpu/: resource_pool.rs
src/materials/: material_system.rs
src/shaders/: bloom_v1.wgsl  brdf_lut.wgsl  dof.wgsl  irradiance_conv.wgsl  lod_compute.wgsl  particle_compute.wgsl  pbr_full.wgsl  post_blit.wgsl  prefilter_env.wgsl  ray_trace.wgsl  render_passes.wgsl  shadow_depth.wgsl  shadow_sampling.wgsl  skybox_frag.wgsl  skybox_vert.wgsl  spectral_decode.wgsl  ssao.wgsl  ssr.wgsl  taa.wgsl  ultra_main.wgsl  ultra_post.wgsl
