[package]
name = "slop_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "slop_engine"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# -----------------------------------
# Rendering & Windowing
# -----------------------------------
wgpu = "22"
winit = "0.30"
glam = { version = "0.24", features = ["bytemuck"] }
bytemuck = { version = "1", features = ["derive"] }

# -----------------------------------
# Physics (Rapier)
# -----------------------------------
# IMPORTANT: If you use Nalgebra structs (Vector3, etc) with Rapier, 
# you MUST enable "nalgebra-convert". 
# OR switch to Rapier's built-in simba math.
rapier2d = { version = "0.17", features = ["wasm-bindgen", "simba-is-enabled"] }
rapier3d = { version = "0.17", features = ["wasm-bindgen", "simba-is-enabled"] }
nalgebra = { version = "0.32", features = ["bytemuck"] } # Keep only if you need it separate from Rapier

# -----------------------------------
# Concurrency & Utilities
# -----------------------------------
parking_lot = "0.12"
anyhow = "1"
lru = "0.16.3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
log = "0.4"

# -----------------------------------
# Assets & Loading
# -----------------------------------
gltf = "1"
gltf-json = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# -----------------------------------
# Randomness (Required for WASM)
# -----------------------------------
getrandom = { version = "0.2", features = ["js"] }

[features]
default = []
high_priority = []
lru_safe = []

# ===================================
# Native-Only Dependencies
# ===================================
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Audio (Required for user uploads + playback)
rodio = { version = "0.17", features = ["symphonia-all"] }
env_logger = "0.11"
notify = "6"
pollster = "0.3"
# WARNING: Crossbeam is heavy and hard to compile for WASM. 
# If you get WASM build errors, disable this or put it behind a feature flag.
crossbeam = "0.8"

# ===================================
# WASM-Only Dependencies
# ===================================
[target.'cfg(target_arch = "wasm32")'.dependencies]
# Audio (Context, AudioBuffers, File reading)
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element", "HtmlCanvasElement",
    "AudioContext", "AudioBuffer", "AudioBufferSourceNode", "GainNode",
    "File", "FileReader", "Blob", "Url", "Response"
]}
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "1"

# -----------------------------------
# Optimization Profiles
# -----------------------------------

# Dev builds should be fast to compile
[profile.dev]
opt-level = 1
debug = true
split-debuginfo = "unpacked"

# Release builds should be tiny and fast
[profile.release]
opt-level = 3
lto = "fat"       # "fat" is slower to compile but faster runtime. Use "thin" for faster compiles.
codegen-units = 1
panic = "abort"   # Abort reduces WASM size significantly
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
