[package]
name = "slop_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "slop_engine"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"] # cdylib for WASM, rlib for Native

[features]
default = []
# High-performance features (Native only)
high_priority = ["dep:thread-priority"]
mimalloc = ["dep:mimalloc"]
tokio_runtime = ["dep:tokio"]
lru_safe = []

[dependencies]
# -----------------------------------
# Rendering & Windowing
# -----------------------------------
wgpu = "22.0"
winit = "0.30"
glam = { version = "0.24", features = ["bytemuck"] }
bytemuck = { version = "1.16", features = ["derive"] }

# -----------------------------------
# Physics & Math (Rapier)
# -----------------------------------
rapier2d = { version = "0.17", features = ["wasm-bindgen"] }
rapier3d = { version = "0.17", features = ["wasm-bindgen"] }
nalgebra = { version = "0.32", features = ["bytemuck"] }

# -----------------------------------
# Concurrency, State, & Utilities
# -----------------------------------
parking_lot = "0.12"
anyhow = "1.0"
lru = "0.16.3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
log = "0.4"
rayon = "1.10"
smallvec = { version = "1.13", features = ["union", "manually_drop"] }
blake3 = "1.5"
digest = "0.10"

# -----------------------------------
# Assets & Loading
# -----------------------------------
gltf = "1.4"
gltf-json = "1.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# -----------------------------------
# Extra Dependencies (User Added)
# -----------------------------------
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"  # Fast binary serialization for network compression
thiserror = "1.0"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
sysinfo = "0.30"
tracing = "0.1"
tracing-subscriber = "0.3"
ahash = "0.8"  # Faster hash maps for ECS and resource management
dashmap = "5.5"  # Lock-free concurrent hash map

# -----------------------------------
# Optional: Extra optimization
# -----------------------------------
flume = "0.11"  # High-performance channel implementation
parking_lot_core = "0.9"  # Explicit dependency for faster parking_lot operations

# ===================================
# Native-Only Dependencies (Windows/Mac/Linux)
# ===================================
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rodio = { version = "0.17", features = ["symphonia-all"] }
env_logger = "0.11"
notify = "6.1"
pollster = "0.3"
crossbeam = "0.8"
crossbeam-queue = "0.3"  # SegQueue for lock-free queuing
fxhash = "0.2"
memmap2 = "0.9"  # Memory-mapped files for asset streaming

# Optional High-Performance Native Crates
mimalloc = { version = "0.1", optional = true }
thread-priority = { version = "1.1", optional = true }
tokio = { version = "1.37", features = ["rt-multi-thread", "time", "net", "sync", "rt"], optional = true }

# WASM-specific fast random
getrandom = { version = "0.2", features = ["js"] }

# ===================================
# WASM-Only Dependencies (Web)
# ===================================
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element", "HtmlCanvasElement",
    "AudioContext", "AudioBuffer", "AudioBufferSourceNode", "GainNode",
    "File", "FileReader", "Blob", "Url", "Response"
]}
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "1.0"

# ===================================
# Optimization Profiles
# ===================================

[profile.dev]
opt-level = 1
debug = true
split-debuginfo = "unpacked" # Faster compilation on mac/linux
# Keep optimization for dependencies in debug for better FPS
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat" # Maximize performance across crate boundaries
codegen-units = 1 # Slower compile, but significantly faster binary
strip = true # Strip symbols (smaller binary size)
panic = "abort" # Smaller binary, faster panics (uncomment if no catching panics needed)

[profile.release.build-override]
opt-level = 3
lto = true
codegen-units = 1

# ===================================
# WASM Optimization
# ===================================
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]